--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="article.html">Статьи</a></li>
             </ul>
         </nav>
+        <div class="line"></div>
         <div class="main">
             <div class="text-main">
                 <img src="1.png">
