--- a/video.html
+++ b/video.html
@@ -13,6 +13,16 @@
                 <li><a href="article.html">Статьи</a></li>
             </ul>
         </nav>
+        <div class="line"></div>
+        <img class='rrr' src="1.png">
+        <a class="wim" href="wim.html">Pixies — Where is my mind? (mini cover)</a>
+        <div class="line2"></div>
+       
+    </body>
+    <body>
+        <img class="lll" src="2.png" >
+        <a class="prob" href="prob.html">Кусок видео для демонстрации сайта</a>
+        <hr class="line3">
     </body>
 
 </html>
