--- a/article.html
+++ b/article.html
@@ -13,6 +13,8 @@
                 <li><a href="article.html">Статьи</a></li>
             </ul>
         </nav>
+        <div class="line"></div>
+
     </body>
 
 </html>
